--- a/src/libalien_ffi_rs/Makefile
+++ b/src/libalien_ffi_rs/Makefile
@@ -1,12 +1,12 @@
 TARGET = libalien_ffi_rs
 
-$(TARGET): target/debug/libalien_ffi_rs.a target/debug/libalien_ffi_rs.so
+$(TARGET): target/release/libalien_ffi_rs.a target/release/libalien_ffi_rs.so
 
-target/debug/libalien_ffi_rs.a:
-	cargo build --offline
+target/release/libalien_ffi_rs.a:
+	cargo build --offline --release
 
-target/debug/libalien_ffi_rs.so:
-	cargo build --offline
+target/release/libalien_ffi_rs.so:
+	cargo build --offline --release
 
 clean:
 	cargo clean
