alien_ffi: Added simple `bench` from `deku` and primitive interface.

--- a/src/dune
+++ b/src/dune
@@ -3,7 +3,7 @@
 (library
  (name alien_ffi)
  (public_name alien_ffi)
- (modules arena)
+ (modules arena bench interface)
  (libraries alien_ffi.c bigstring unix threads)
  (library_flags :standard -linkall))
 
