alien_ffi: Added some basic `nix` scripts for the C and `rust` compilation.

--- a/src/libalien_ffi_rs/Cargo.toml
+++ b/src/libalien_ffi_rs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "alien_ffi"
+name = "libalien_ffi_rs"
 version = "0.1.0"
 authors = [ "Edward Tate <et4te@0fx.io>" ]
 description = "An FFI stub for OCaml."
